# MEC2022

./: .gitignore  README.md  README_EN.md
ai/: .gitignore  Battleship.py  Bot.py  Game.py  Main.py  README_EN.md
debug/: .gitignore  CMakeLists.txt  README_EN.md
debug/src/: CMakeLists.txt
debug/src/karaoke/: Karaoke.cpp  Karaoke.h
debug/src/singer/: FrenchSinger.cpp  FrenchSinger.h  Singer.cpp  Singer.h
debug/src/song/: BoringSong.cpp  BoringSong.h  GreatSong.cpp  GreatSong.h  Song.cpp  Song.h
debug/test/: CMakeLists.txt  karaokeTest.cpp  singerTest.cpp  songTest.cpp  test.cpp
devops/: .gitignore  README_EN.md  docker-compose.yml
devops/client/: .gitignore  Dockerfile.prod  README.md  angular.json  karma.conf.js  nginx.conf  package.json
devops/client/src/: index.html
devops/client/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
devops/server/: .gitignore  Dockerfile.prod  package.json
devops/server/src/: app.controller.ts  app.module.ts  app.service.ts  database.providers.ts
docs/: asset-manifest.json  index.html
docs/static/js/: 787.252c5a3f.chunk.js.map  main.8d3d79b7.js  main.8d3d79b7.js.map  main.d3450d97.js  main.d3450d97.js.map
mobile/: README_EN.md  schedule.csv
operating-system/: .clang-format  .gitignore  CMakeLists.txt  README_EN.md
operating-system/data/: check.sh  fetch.sh
operating-system/include/: filter.h  image.h  pipeline.h  queue.h
operating-system/source/: filter.c  image.c  main.c  pipeline-pthread.c  pipeline-serial.c  pipeline-tbb.cpp  queue.c
reverse/: README_EN.md  binary-test  binary-with-flag  code.c
software/en/: README.md
software/en/question-1/: answer.md  question.md
software/en/question-2/: answer.md  question.md
software/en/question-3/: answer.md  question.md
software/en/question-4/: answer.md  question.md
software/en/question-5/: answer.md  question.md
web/: README_EN.md  schedule.csv  tickets.json
web/PotatoFest/: package-lock.json  package.json
web/PotatoFest/src/: App.js  index.js
web/PotatoFest/src/components/: ContactForm.js  Countdown.js  FAQ.js  Home.js  Navbar.js  PracticalInfo.js  Programmation.js  Tickets.js
